unpackaged/main/default/objects/Asset/fields/Agence_Localisation__c.field-meta.xml
<CustomField>
    <fullName>Agence_Localisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence Localisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parcs (Agence Localisation)</relationshipLabel>
    <relationshipName>Parcs_Localisation</relationshipName>
    <type>Lookup</type>
</CustomField>