unpackaged/main/default/objects/Asset/fields/AgencePF__c.field-meta.xml
<CustomField>
    <fullName>AgencePF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Parc</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>