unpackaged/main/default/objects/Asset/fields/Agency_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Location_Name__c</fullName>
    <formula>Agence_Localisation__r.Name</formula>
    <label>Agency Location Name</label>
    <type>Text</type>
</CustomField>