unpackaged/main/default/objects/Asset/fields/Alerte__c.field-meta.xml
<CustomField>
    <fullName>Alerte__c</fullName>
    <formula>if( Date_alerte_tension_batterie__c = today()
,
true,
false)</formula>
    <label>Alerte</label>
    <type>Checkbox</type>
</CustomField>