unpackaged/main/default/objects/Asset/fields/Alimentation__c.field-meta.xml
<CustomField>
    <fullName>Alimentation__c</fullName>
    <label>Alimentation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>