unpackaged/main/default/objects/Asset/fields/Ann_e_Dernier_tour_parc__c.field-meta.xml
<CustomField>
    <fullName>Ann_e_Dernier_tour_parc__c</fullName>
    <formula>IF(YEAR( Date_du_dernier_tour_de_parc__c )=2021,1, 0)</formula>
    <label>Année_Dernier_tour_parc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>