unpackaged/main/default/objects/Asset/fields/Annee_FAB__c.field-meta.xml
<CustomField>
    <fullName>Annee_FAB__c</fullName>
    <label>Année FAB</label>
    <length>5</length>
    <type>Text</type>
</CustomField>