unpackaged/main/default/objects/Asset/fields/blng__InvoiceLineBalance__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLineBalance__c</fullName>
    <description>The sum of all posted invoice line balances for this asset.</description>
    <inlineHelpText>La somme de tous les soldes de ligne de facture publiés pour cet actif.</inlineHelpText>
    <label>Invoice Line Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>