unpackaged/main/default/objects/Asset/fields/Carburant__c.field-meta.xml
<CustomField>
    <fullName>Carburant__c</fullName>
    <formula>CASE( text(Energie__c) , 
&#39;Électrique&#39;,  IMAGE(&#39;/resource/1673515210000/Icon_Electrique?&#39;, &#39;&#39;, 64, 64) , 
&#39;Biogazole B100&#39;,IMAGE(&#39;/resource/1673515242000/Icon_B100?&#39;, &#39;&#39; , 45, 45),
&#39;GNV&#39;,IMAGE(&#39;/resource/1673515167000/Icon_CNG&#39;, &#39;&#39; , 64, 64),
null

)</formula>
    <label>Energie</label>
    <type>Text</type>
</CustomField>