unpackaged/main/default/objects/Asset/fields/Carrosserie__c.field-meta.xml
<CustomField>
    <fullName>Carrosserie__c</fullName>
    <label>Carrosserie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A G BRACEY</fullName>
            </value>
            <value>
                <fullName>AL-SHIRAW</fullName>
            </value>
            <value>
                <fullName>ALUVAN</fullName>
            </value>
            <value>
                <fullName>ASCA</fullName>
            </value>
            <value>
                <fullName>AUTO INDUSTRIALE BERGAMASCA S.P.A.</fullName>
            </value>
            <value>
                <fullName>AUTONADWOZIA MATCZAK</fullName>
            </value>
            <value>
                <fullName>BARANYAI MERNOKIRODA KFT</fullName>
            </value>
            <value>
                <fullName>BAUMGARTNER D.T AG</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>BRH - ROSIER</fullName>
            </value>
            <value>
                <fullName>CA.VI.ME.</fullName>
            </value>
            <value>
                <fullName>Carlsen Baltic, UAB</fullName>
            </value>
            <value>
                <fullName>CARPOL</fullName>
            </value>
            <value>
                <fullName>CARROSSERIE AUBINEAU</fullName>
            </value>
            <value>
                <fullName>CARROSSERIE CAZAUX</fullName>
            </value>
            <value>
                <fullName>CARROSSERIE LAMBERT</fullName>
            </value>
            <value>
                <fullName>CARROSSERIE TOUTAIN</fullName>
            </value>
            <value>
                <fullName>CARROSSIER UK</fullName>
            </value>
            <value>
                <fullName>CARROZZERIA A.C. PLAST ROBBIESE S.r</fullName>
            </value>
            <value>
                <fullName>CAZAUX</fullName>
            </value>
            <value>
                <fullName>CECI</fullName>
            </value>
            <value>
                <fullName>CERIANI GROUP SPA</fullName>
            </value>
            <value>
                <fullName>CHEREAU</fullName>
            </value>
            <value>
                <fullName>CIBIN</fullName>
            </value>
            <value>
                <fullName>CITROEN S.A.S. GRAU</fullName>
            </value>
            <value>
                <fullName>COFI EUROPE</fullName>
            </value>
            <value>
                <fullName>COINPOL</fullName>
            </value>
            <value>
                <fullName>COLD CAR</fullName>
            </value>
            <value>
                <fullName>COLDWAY</fullName>
            </value>
            <value>
                <fullName>COOLING VAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>