unpackaged/main/default/objects/Asset/fields/cat_ptc__c.field-meta.xml
<CustomField>
    <fullName>cat_ptc__c</fullName>
    <label>Catégorie PTC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VL</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>CF10</fullName>
            </value>
            <value>
                <fullName>CF110</fullName>
            </value>
            <value>
                <fullName>CF20</fullName>
            </value>
            <value>
                <fullName>CF25</fullName>
            </value>
            <value>
                <fullName>CF30</fullName>
            </value>
            <value>
                <fullName>CF35</fullName>
            </value>
            <value>
                <fullName>CF50</fullName>
            </value>
            <value>
                <fullName>CF55</fullName>
            </value>
            <value>
                <fullName>CF85</fullName>
            </value>
            <value>
                <fullName>CF90</fullName>
            </value>
            <value>
                <fullName>CF10B</fullName>
            </value>
            <value>
                <fullName>CM25B</fullName>
            </value>
            <value>
                <fullName>CM55B</fullName>
            </value>
            <value>
                <fullName>CM10S</fullName>
            </value>
            <value>
                <fullName>CM25S</fullName>
            </value>
            <value>
                <fullName>CM55S</fullName>
            </value>
            <value>
                <fullName>CM90S</fullName>
            </value>
            <value>
                <fullName>CF100</fullName>
            </value>
            <value>
                <fullName>CM25SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>