unpackaged/main/default/objects/Asset/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <formula>TEXT(Categorie_Famille__c) +&#39; &#39;+ categorie_equipement__c</formula>
    <label>Catégorie</label>
    <type>Text</type>
</CustomField>