unpackaged/main/default/objects/Asset/fields/categorie_equipement__c.field-meta.xml
<CustomField>
    <fullName>categorie_equipement__c</fullName>
    <label>Catégorie Equipement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>