unpackaged/main/default/objects/Asset/fields/Cellule_neuve__c.field-meta.xml
<CustomField>
    <fullName>Cellule_neuve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cellule neuve</label>
    <type>Checkbox</type>
</CustomField>