unpackaged/main/default/objects/Asset/fields/Code_Cl__c.field-meta.xml
<CustomField>
    <fullName>Code_Cl__c</fullName>
    <label>Code Clé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>