unpackaged/main/default/objects/Asset/fields/Code_PF__c.field-meta.xml
<CustomField>
    <fullName>Code_PF__c</fullName>
    <label>Code PF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>