unpackaged/main/default/objects/Asset/fields/Code_Radio__c.field-meta.xml
<CustomField>
    <fullName>Code_Radio__c</fullName>
    <label>Code radio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>