unpackaged/main/default/objects/Asset/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>Date_de_fin_de_fabrication__c + 31</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_End_Transport_fab</label>
    <type>Date</type>
</CustomField>