unpackaged/main/default/objects/Asset/fields/Date_alerte_tension_batterie__c.field-meta.xml
<CustomField>
    <fullName>Date_alerte_tension_batterie__c</fullName>
    <label>Date alerte tension batterie</label>
    <type>Date</type>
</CustomField>