unpackaged/main/default/objects/Asset/fields/Date_Cellule__c.field-meta.xml
<CustomField>
    <fullName>Date_Cellule__c</fullName>
    <label>Date Cellule</label>
    <type>Date</type>
</CustomField>