unpackaged/main/default/objects/Asset/fields/Date_de_cession__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cession__c</fullName>
    <label>Date de cession</label>
    <type>Date</type>
</CustomField>