unpackaged/main/default/objects/Asset/fields/Date_de_debut_asset__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut_asset__c</fullName>
    <label>Date de debut</label>
    <type>Date</type>
</CustomField>