unpackaged/main/default/objects/Asset/fields/Date_de_fin_asset__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_asset__c</fullName>
    <description>Date de fin servant de filtre conteneur sur l&#39;outil fleet management</description>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>