unpackaged/main/default/objects/Asset/fields/Date_de_fin_de_fabrication__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_fabrication__c</fullName>
    <label>Date de fin de fabrication</label>
    <type>Date</type>
</CustomField>