unpackaged/main/default/objects/Asset/fields/Date_End_Atelier_fab__c.field-meta.xml
<CustomField>
    <fullName>Date_End_Atelier_fab__c</fullName>
    <formula>Date_de_fin_de_fabrication__c + 62</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_End_Atelier_fab</label>
    <type>Date</type>
</CustomField>