unpackaged/main/default/objects/Asset/fields/Date_End_Fabrication__c.field-meta.xml
<CustomField>
    <fullName>Date_End_Fabrication__c</fullName>
    <formula>Date_de_fin_de_fabrication__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_End_Fabrication</label>
    <type>Date</type>
</CustomField>