unpackaged/main/default/objects/Asset/fields/Date_IMMAT__c.field-meta.xml
<CustomField>
    <fullName>Date_IMMAT__c</fullName>
    <label>Date 1ere MEC</label>
    <type>Date</type>
</CustomField>