unpackaged/main/default/objects/Asset/fields/Date_of_cession_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>Date_of_cession_in_the_past__c</fullName>
    <formula>Date_de_cession__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_of_cession_in_the_past</label>
    <type>Checkbox</type>
</CustomField>