unpackaged/main/default/objects/Asset/fields/DateDerMajKmIgloo__c.field-meta.xml
<CustomField>
    <fullName>DateDerMajKmIgloo__c</fullName>
    <label>Date Dernière Maj Km Igloo</label>
    <type>DateTime</type>
</CustomField>