unpackaged/main/default/objects/Asset/fields/Energie__c.field-meta.xml
<CustomField>
    <fullName>Energie__c</fullName>
    <label>Energie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gazole</fullName>
            </value>
            <value>
                <fullName>Électrique</fullName>
            </value>
            <value>
                <fullName>Essence</fullName>
            </value>
            <value>
                <fullName>Hybride G/E</fullName>
            </value>
            <value>
                <fullName>GNV</fullName>
            </value>
            <value>
                <fullName>GPL</fullName>
            </value>
            <value>
                <fullName>Biogazole B100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>