unpackaged/main/default/objects/Asset/fields/Equipement_Debut_garantie__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Debut_garantie__c</fullName>
    <label>Début garantie</label>
    <type>Date</type>
</CustomField>