unpackaged/main/default/objects/Asset/fields/Equipement_Famille__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Famille__c</fullName>
    <label>Famille</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCES</fullName>
            </value>
            <value>
                <fullName>ANTIDEMARRAGE</fullName>
            </value>
            <value>
                <fullName>ARRIMAGE</fullName>
            </value>
            <value>
                <fullName>CAISSE</fullName>
            </value>
            <value>
                <fullName>CHASSIS</fullName>
            </value>
            <value>
                <fullName>CLOISONS</fullName>
            </value>
            <value>
                <fullName>ENREGISTREUR TEMPERATURE</fullName>
            </value>
            <value>
                <fullName>ETAGERES</fullName>
            </value>
            <value>
                <fullName>GEOLOC</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>OPTIONS DE GROUPE</fullName>
            </value>
            <value>
                <fullName>GROUPE</fullName>
            </value>
            <value>
                <fullName>HAYON</fullName>
            </value>
            <value>
                <fullName>OPTIONS HAYON</fullName>
            </value>
            <value>
                <fullName>OUVERTURES</fullName>
            </value>
            <value>
                <fullName>PENDERIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>