unpackaged/main/default/objects/Asset/fields/Equipement_Fin_garantie__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Fin_garantie__c</fullName>
    <label>Fin garantie</label>
    <type>Date</type>
</CustomField>