unpackaged/main/default/objects/Asset/fields/Equipement_HeuresTotalesFonctionnement__c.field-meta.xml
<CustomField>
    <fullName>Equipement_HeuresTotalesFonctionnement__c</fullName>
    <label>Heures Totales de fonctionnement</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>