unpackaged/main/default/objects/Asset/fields/Equipement_Modele__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Modele__c</fullName>
    <label>Modele</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipement_Sous_Famille__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>ADVANCER</fullName>
            </value>
            <value>
                <fullName>AIRBUS</fullName>
            </value>
            <value>
                <fullName>ALASKA</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CD 2</fullName>
            </value>
            <value>
                <fullName>CD1</fullName>
            </value>
            <value>
                <fullName>DFZ</fullName>
            </value>
            <value>
                <fullName>DIVERS</fullName>
            </value>
            <value>
                <fullName>GENESIS</fullName>
            </value>
            <value>
                <fullName>KD</fullName>
            </value>
            <value>
                <fullName>MAXIMA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MISTRAL</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>SDZ</fullName>
            </value>
            <value>
                <fullName>SIFO</fullName>
            </value>
            <value>
                <fullName>SL TCI</fullName>
            </value>
            <value>
                <fullName>SL200 50CS</fullName>
            </value>
            <value>
                <fullName>SLK 400.50</fullName>
            </value>
            <value>
                <fullName>SLX</fullName>
            </value>
            <value>
                <fullName>SLX 300.50</fullName>
            </value>
            <value>
                <fullName>SPECTRUM</fullName>
            </value>
            <value>
                <fullName>SUPRA</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>TD</fullName>
            </value>
            <value>
                <fullName>TFV</fullName>
            </value>
            <value>
                <fullName>TK</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>