unpackaged/main/default/objects/Asset/fields/Equipement_Num_Serie__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Num_Serie__c</fullName>
    <label>N° série</label>
    <length>20</length>
    <type>Text</type>
</CustomField>