unpackaged/main/default/objects/Asset/fields/Equipement_Sous_Famille__c.field-meta.xml
<CustomField>
    <fullName>Equipement_Sous_Famille__c</fullName>
    <label>Sous Famille</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipement_Famille__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCES ARRIERE</fullName>
            </value>
            <value>
                <fullName>ACCES AVANT</fullName>
            </value>
            <value>
                <fullName>ACCES LATERAL</fullName>
            </value>
            <value>
                <fullName>ETHYLOTEST</fullName>
            </value>
            <value>
                <fullName>ARRIMAGE RAIL</fullName>
            </value>
            <value>
                <fullName>ARRIMAGE TUBE</fullName>
            </value>
            <value>
                <fullName>CAISSE INCONNU</fullName>
            </value>
            <value>
                <fullName>CHASSIS INCONNU</fullName>
            </value>
            <value>
                <fullName>CLOISON FIXE</fullName>
            </value>
            <value>
                <fullName>CLOISON MOBILE</fullName>
            </value>
            <value>
                <fullName>ENR. TEMP. DISQUE</fullName>
            </value>
            <value>
                <fullName>ENR. TEMP. ELECTRONIQUE</fullName>
            </value>
            <value>
                <fullName>ETAGERE AMOVIBLE</fullName>
            </value>
            <value>
                <fullName>ETAGERE FIXE</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE</fullName>
            </value>
            <value>
                <fullName>FROID</fullName>
            </value>
            <value>
                <fullName>SEC</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>DIVERS_OG</fullName>
                <label>DIVERS (OG)</label>
            </value>
            <value>
                <fullName>FLUIDES</fullName>
            </value>
            <value>
                <fullName>GROUPE AUTONOME</fullName>
            </value>
            <value>
                <fullName>GROUPE ELECTRIQUE</fullName>
            </value>
            <value>
                <fullName>GROUPE EUTECT.+ PM</fullName>
            </value>
            <value>
                <fullName>GROUPE EUTECTIQUE</fullName>
            </value>
            <value>
                <fullName>GROUPE INCONNU</fullName>
            </value>
            <value>
                <fullName>GROUPE POULIE MOTEUR</fullName>
            </value>
            <value>
                <fullName>HAYON A COLONNES</fullName>
            </value>
            <value>
                <fullName>HAYON CASSETTE</fullName>
            </value>
            <value>
                <fullName>HAYON INTERNE</fullName>
            </value>
            <value>
                <fullName>HAYON ISOTHERME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>