unpackaged/main/default/objects/Asset/fields/FAB_AV__c.field-meta.xml
<CustomField>
    <fullName>FAB_AV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAB AV</label>
    <type>Checkbox</type>
</CustomField>