unpackaged/main/default/objects/Asset/fields/GPS_Geoloc__c.field-meta.xml
<CustomField>
    <fullName>GPS_Geoloc__c</fullName>
    <label>GPS (Géoloc)</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>