unpackaged/main/default/objects/Asset/fields/Haut_Hors_tout__c.field-meta.xml
<CustomField>
    <fullName>Haut_Hors_tout__c</fullName>
    <label>Haut. Hors tout</label>
    <length>40</length>
    <type>Text</type>
</CustomField>