unpackaged/main/default/objects/Asset/fields/Haut_Int_Utile__c.field-meta.xml
<CustomField>
    <fullName>Haut_Int_Utile__c</fullName>
    <label>Haut. Int. Utile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>