unpackaged/main/default/objects/Asset/fields/Identifiant_Unique__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_Unique__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Identifiant Unique</label>
    <type>AutoNumber</type>
</CustomField>