unpackaged/main/default/objects/Asset/fields/IMMAT__c.field-meta.xml
<CustomField>
    <fullName>IMMAT__c</fullName>
    <label>IMMAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>