unpackaged/main/default/objects/Asset/fields/IsFromSAP__c.field-meta.xml
<CustomField>
    <fullName>IsFromSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFromSAP</label>
    <type>Checkbox</type>
</CustomField>