unpackaged/main/default/objects/Asset/fields/IsParc__c.field-meta.xml
<CustomField>
    <fullName>IsParc__c</fullName>
    <formula>IF(
AND(
RecordTypeId &lt;&gt; &#39;0123X000000XN7RQAW&#39;,
OR(
CONTAINS(Name, &#39;PF&#39;),CONTAINS(Name, &#39;CO&#39;),CONTAINS(Name, &#39;ST&#39;)
) 
) 
, true, false)</formula>
    <label>IsParc</label>
    <type>Checkbox</type>
</CustomField>