unpackaged/main/default/objects/Asset/fields/Jours_restants_garantie_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Jours_restants_garantie_Chassis__c</fullName>
    <formula>if(1098&gt;Age_du_vehicule__c,1098 -  Age_du_vehicule__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jours restants garantie Chassis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>