unpackaged/main/default/objects/Asset/fields/Jours_restants_garantie_Frigo__c.field-meta.xml
<CustomField>
    <fullName>Jours_restants_garantie_Frigo__c</fullName>
    <formula>if(732 &gt;Age_du_vehicule__c,732 - Age_du_vehicule__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jours restants garantie Frigo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>