unpackaged/main/default/objects/Asset/fields/KmCompteurConstate__c.field-meta.xml
<CustomField>
    <fullName>KmCompteurConstate__c</fullName>
    <label>Km Compteur Constate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>