unpackaged/main/default/objects/Asset/fields/KmCompteurIgloo__c.field-meta.xml
<CustomField>
    <fullName>KmCompteurIgloo__c</fullName>
    <label>Km Compteur Igloo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>