unpackaged/main/default/objects/Asset/fields/Larg_Hors_tout__c.field-meta.xml
<CustomField>
    <fullName>Larg_Hors_tout__c</fullName>
    <label>Larg. Hors tout</label>
    <length>40</length>
    <type>Text</type>
</CustomField>