unpackaged/main/default/objects/Asset/fields/Larg_Int_Utile__c.field-meta.xml
<CustomField>
    <fullName>Larg_Int_Utile__c</fullName>
    <label>Larg. Int. Utile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>