unpackaged/main/default/objects/Asset/fields/LastKmCompteurIsOK__c.field-meta.xml
<CustomField>
    <fullName>LastKmCompteurIsOK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LastKmCompteurIsOK</label>
    <type>Checkbox</type>
</CustomField>