unpackaged/main/default/objects/Asset/fields/Long_Hors_tout__c.field-meta.xml
<CustomField>
    <fullName>Long_Hors_tout__c</fullName>
    <label>Long. Hors tout</label>
    <length>40</length>
    <type>Text</type>
</CustomField>