unpackaged/main/default/objects/Asset/fields/Long_Int_Utile__c.field-meta.xml
<CustomField>
    <fullName>Long_Int_Utile__c</fullName>
    <label>Long. Int. Utile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>