unpackaged/main/default/objects/Asset/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOUPIL</fullName>
            </value>
            <value>
                <fullName>IVECO</fullName>
            </value>
            <value>
                <fullName>MERCEDES</fullName>
            </value>
            <value>
                <fullName>RVI</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FRUEHAUF</fullName>
            </value>
            <value>
                <fullName>LAMBERET</fullName>
            </value>
            <value>
                <fullName>SAMRO</fullName>
            </value>
            <value>
                <fullName>ALFA ROMEO</fullName>
            </value>
            <value>
                <fullName>ANCY FACTORY</fullName>
            </value>
            <value>
                <fullName>ASCA</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>BENALU</fullName>
            </value>
            <value>
                <fullName>BERLIET</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>CADILLAC</fullName>
            </value>
            <value>
                <fullName>CHEREAU</fullName>
            </value>
            <value>
                <fullName>CODER</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>DESOT</fullName>
            </value>
            <value>
                <fullName>EUROCOOLER</fullName>
            </value>
            <value>
                <fullName>FENWICK</fullName>
            </value>
            <value>
                <fullName>FLURY AL 52-21</fullName>
            </value>
            <value>
                <fullName>FOIMA</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>FRAPPA</fullName>
            </value>
            <value>
                <fullName>FREEGONES</fullName>
            </value>
            <value>
                <fullName>GROSSE EQUIPEMENT</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>