unpackaged/main/default/objects/Asset/fields/Metiers__c.field-meta.xml
<CustomField>
    <fullName>Metiers__c</fullName>
    <label>Métiers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Froid</fullName>
            </value>
            <value>
                <fullName>Sec</fullName>
            </value>
            <value>
                <fullName>Hygiène</fullName>
            </value>
            <value>
                <fullName>Brasseur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>