unpackaged/main/default/objects/Asset/fields/Motif_de_Cession__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_Cession__c</fullName>
    <label>Motif de Cession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vol</fullName>
            </value>
            <value>
                <fullName>Destruction</fullName>
            </value>
            <value>
                <fullName>Vente</fullName>
            </value>
            <value>
                <fullName>Perte Totale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>