unpackaged/main/default/objects/Asset/fields/Motif_fabrication__c.field-meta.xml
<CustomField>
    <fullName>Motif_fabrication__c</fullName>
    <label>Motif fabrication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAB CF PREMIUM LECAPITAINE</fullName>
            </value>
            <value>
                <fullName>FAB CF PREMIUM LCT</fullName>
            </value>
            <value>
                <fullName>FAB CF MARITIME SPECIAL</fullName>
            </value>
            <value>
                <fullName>FAB CF MARITIME ASSEMBLAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>