unpackaged/main/default/objects/Asset/fields/N_Compte_IGLOO__c.field-meta.xml
<CustomField>
    <fullName>N_Compte_IGLOO__c</fullName>
    <label>N° Compte IGLOO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>