unpackaged/main/default/objects/Asset/fields/N_de_cellule__c.field-meta.xml
<CustomField>
    <fullName>N_de_cellule__c</fullName>
    <label>N° de cellule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>