unpackaged/main/default/objects/Asset/fields/nb_alertes_non_traitees__c.field-meta.xml
<CustomField>
    <fullName>nb_alertes_non_traitees__c</fullName>
    <label>nb alertes non traitées</label>
    <summaryFilterItems>
        <field>Alerte__c.Alerte_traitee__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Alerte__c.Parc__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>