unpackaged/main/default/objects/Asset/fields/NB_Cases_PFAssist__c.field-meta.xml
<CustomField>
    <fullName>NB_Cases_PFAssist__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NB_Cases_PFAssist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>