unpackaged/main/default/objects/Asset/fields/Nb_Palettes__c.field-meta.xml
<CustomField>
    <fullName>Nb_Palettes__c</fullName>
    <label>Nb Palettes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>